# HuIPC

./: .gitignore  CMakeLists.txt  NOTICE  README.txt
include/: event.h  huMessageQueue.h  sharedMemory.h  tools.h
include/huIPC/: dll.h  event.h
src/: huMessageQueue.c  test_cir.c  tools.c
src/win/: event.c  sharedMemory.c
